--- a/src/tutorial/template.properties
+++ b/src/tutorial/template.properties
@@ -2,3 +2,5 @@ color_scheme=github
 app_version=0.13.2
 sbt_native_package_base=http://dl.bintray.com/sbt/native-packages/sbt/
 launcher_release_base=http://repo.typesafe.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/
+layout.header=header.md
+layout.header.height=80px
