--- a/src/tutorial/template.properties
+++ b/src/tutorial/template.properties
@@ -1,5 +1,8 @@
 color_scheme=github
 app_version=0.13.2
+scala_binary_version=2.10
+global_plugins_base=~/.sbt/0.13/plugins/
+global_sbt_file=~/.sbt/0.13/global.sbt
 sbt_native_package_base=http://dl.bintray.com/sbt/native-packages/sbt/
 launcher_release_base=http://repo.typesafe.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/
 layout.header=header.md
