--- a/src/nanoc/nanoc.yaml
+++ b/src/nanoc/nanoc.yaml
@@ -57,3 +57,7 @@ data_sources:
     # will have the identifier “/about/” when turned off, but when turned on
     # it will become “/about.html/” instead.
     allow_periods_in_identifiers: false
+
+sbtVersion: 0.13.2
+
+sbtBinaryVersion: 0.13
