--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -8,6 +8,7 @@ global_shellprompt_scala=~/.sbt/0.13/plugins/ShellPrompt.scala
 global_sbt_file=~/.sbt/0.13/global.sbt
 sbt_native_package_base=http://dl.bintray.com/sbt/native-packages/sbt/
 launcher_release_base=http://repo.typesafe.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/
+typesafe_ivy_snapshots=http://repo.typesafe.com/typesafe/ivy-snapshots/
 layout.header=header.md
 layout.header.height=80px
 pamflet.arrow=>
