--- a/src/tutorial/template.properties
+++ b/src/tutorial/template.properties
@@ -1,6 +1,7 @@
 color_scheme=github
 app_version=0.13.2
 scala_binary_version=2.10
+scala_version=2.10.3
 global_base=~/.sbt/0.13
 global_plugins_base=~/.sbt/0.13/plugins/
 global_plugin_sbt_file=~/.sbt/0.13/plugins/build.sbt
