--- a/src/tutorial/template.properties
+++ b/src/tutorial/template.properties
@@ -14,6 +14,7 @@ launcher_release_base=http://repo.typesafe.com/typesafe/ivy-releases/org.scala-s
 typesafe_ivy_snapshots=http://repo.typesafe.com/typesafe/ivy-snapshots/
 layout.header=header.md
 layout.header.height=80px
+twitter=#sbt #scala
 pamflet.arrow=>
 
 languages=en,ja,es
