--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -12,4 +12,5 @@ launcher_release_base=http://repo.typesafe.com/typesafe/ivy-releases/org.scala-s
 typesafe_ivy_snapshots=http://repo.typesafe.com/typesafe/ivy-snapshots/
 layout.header=header.md
 layout.header.height=80px
+twitter=#sbt #scala
 pamflet.arrow=>
