--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: scala
 script:
   - sbt makeSite
 jdk:
-  - oraclejdk8
+  - oraclejdk7
 notifications:
   email:
     - qbranch@typesafe.com
@@ -14,4 +14,4 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq ruby-dev
 before_script:
-  - export JVM_OPTS="-Xms1024m -Xmx1024m -XX:ReservedCodeCacheSize=128m -XX:MaxPermSize=256m"
+  - export JVM_OPTS="-Xms1024m -Xmx1024m -XX:ReservedCodeCacheSize=128m -XX:MaxPermSize=256m -Xss1m"
