Fail on pdf error and add more texlive to travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ install:
   - gem install nokogiri
 before_install:
  - sudo apt-get update -qq
- - sudo apt-get install -qq ruby-dev pandoc latex-cjk-all
+ - sudo apt-get install -qq ruby-dev pandoc latex-cjk-all texlive-full
 before_script:
   - export JVM_OPTS="-Xms1024m -Xmx1024m -XX:ReservedCodeCacheSize=128m -XX:MaxPermSize=256m -Xss1m"
