--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - gem install redcarpet
   - gem install nokogiri
 before_install:
- - sudo add-apt-repository ppa:texlive-backports/ppa
+ - sudo add-apt-repository -y ppa:texlive-backports/ppa
  - sudo apt-get update -qq
  - sudo apt-get install -qq ruby-dev pandoc latex-cjk-all texlive-full
 before_script:
