--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ notifications:
   email:
     - qbranch@typesafe.com
 install:
-  - gem install nanoc
+  - gem install nanoc:6.3.9
   - gem install redcarpet
   - gem install nokogiri
 before_install:
