add new Chinese pages as zh-cn

--- a/src/tutorial/template.properties
+++ b/src/tutorial/template.properties
@@ -17,5 +17,6 @@ layout.header.height=80px
 twitter=#sbt #scala
 pamflet.arrow=>
 
-languages=en,ja,es
+languages=en,ja,es,zh-cn
+lang-zh-cn=中文 (简体)
 language=en
