use multi-project style from the beginning

--- a/src/tutorial/template.properties
+++ b/src/tutorial/template.properties
@@ -1,5 +1,6 @@
 color_scheme=github
 app_version=0.13.6
+example_scala_version=2.11.4
 scala_binary_version=2.10
 scala_version=2.10.4
 global_base=~/.sbt/0.13
