Update .scala build to .sbt build with .scala files

--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -3,6 +3,7 @@ app_version=0.13.7
 example_scala_version=2.11.4
 example_scalacheck_version=1.12.0
 example_specs2_version=2.4.14
+example_scalatest_version=2.2.1
 scala_binary_version=2.10
 scala_version=2.10.4
 global_base=~/.sbt/0.13
