Enable Travis caching

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: scala
+cache:
+  apt: true
+  directories:
+    - $HOME/.ivy2/cache 
 script:
   - sbt makeSite
+  # Tricks to avoid unnecessary cache updates
+  - find $HOME/.sbt -name "*.lock" | xargs rm
+  - find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
 jdk:
   - oraclejdk7
 notifications:
