added styling to tutorials

--- a/src/tutorial/template.properties
+++ b/src/tutorial/template.properties
@@ -18,6 +18,7 @@ launcher_release_base=https://repo.typesafe.com/typesafe/ivy-releases/org.scala-
 typesafe_ivy_snapshots=https://repo.typesafe.com/typesafe/ivy-snapshots/
 layout.header=header.md
 layout.header.height=80px
+layout.footer=footer.md
 twitter=#sbt #scala
 pamflet.arrow=>
 
