--- a/src/tutorial/template.properties
+++ b/src/tutorial/template.properties
@@ -22,6 +22,6 @@ layout.footer=footer.md
 twitter=#sbt #scala
 pamflet.arrow=>
 
-languages=en,ja,es,zh-cn
+languages=en,ja,zh-cn,es
 lang-zh-cn=中文 (简体)
 language=en
