use multi-project setup

--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -14,6 +14,7 @@ global_sbt_file=~/.sbt/0.13/global.sbt
 sbt_native_package_base=https://dl.bintray.com/sbt/native-packages/sbt/
 launcher_release_base=https://repo.typesafe.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/
 typesafe_ivy_snapshots=https://repo.typesafe.com/typesafe/ivy-snapshots/
+bintray_sbt_version=0.2.1
 layout.header=header.md
 layout.header.height=80px
 layout.footer=footer.md
