Fix windows build for 0.13.9. Fixes sbt/sbt#2181

--- a/src/nanoc/nanoc.yaml
+++ b/src/nanoc/nanoc.yaml
@@ -63,6 +63,9 @@ data_sources:
 
 sbtVersion: 0.13.9
 
+# This is to fix broken 0.13.9 installer. Not needed for 0.13.10+
+windowsBuild: 0.13.9.2
+
 sbtVersionForScalaDoc: 0.13.7
 
 sbtBinaryVersion: 0.13
