--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
-language: scala
+language: ruby
+rvm: 2.2.x
 cache:
   apt: true
   directories:
-    - $HOME/.ivy2/cache 
+    - $HOME/.ivy2/cache
 script:
   - sbt makeSite
   # Tricks to avoid unnecessary cache updates
