check for encoding

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,4 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq sbt ruby-dev pandoc latex-cjk-all texlive-full
 before_script:
- - export JVM_OPTS="-Xms1024m -Xmx1024m -XX:ReservedCodeCacheSize=128m -XX:MaxPermSize=256m -Xss1m"
+ - export JVM_OPTS="-Xms1024m -Xmx1024m -XX:ReservedCodeCacheSize=128m -XX:MaxPermSize=256m -Xss2m -Dfile.encoding=UTF-8"
