--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -1,22 +1,22 @@
-app_version=0.13.15
-windows_app_version=0.13.15
+app_version=1.0.0-M4
+windows_app_version=1.0.0-M4
 
 color_scheme=github
 example_scala_version=2.12.1
 example_scalacheck_version=1.13.4
 example_specs2_version=2.4.17
 example_scalatest_version=3.0.1
-scala_binary_version=2.10
-scala_version=2.10.6
-global_base=~/.sbt/0.13
-global_plugins_base=~/.sbt/0.13/plugins/
-global_plugin_sbt_file=~/.sbt/0.13/plugins/build.sbt
-global_shellprompt_scala=~/.sbt/0.13/plugins/ShellPrompt.scala
-global_sbt_file=~/.sbt/0.13/global.sbt
+scala_binary_version=2.12
+scala_version=2.12.1
+global_base=~/.sbt/1.0.0-M4
+global_plugins_base=~/.sbt/1.0.0-M4/plugins/
+global_plugin_sbt_file=~/.sbt/1.0.0-M4/plugins/build.sbt
+global_shellprompt_scala=~/.sbt/1.0.0-M4/plugins/ShellPrompt.scala
+global_sbt_file=~/.sbt/1.0.0-M4/global.sbt
 sbt_native_package_base=https://downloads.lightbend.com/sbt/
 sbt_deb_package_base=https://dl.bintray.com/sbt/debian/
 sbt_rpm_package_base=https://dl.bintray.com/sbt/rpm/
-launcher_release_base=https://repo.typesafe.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/
+launcher_release_base=https://repo1.maven.org/maven2/org/scala-sbt/sbt-launch/
 typesafe_ivy_snapshots=https://repo.typesafe.com/typesafe/ivy-snapshots/
 bintray_sbt_version=0.3.0
 layout.header=header.md
