Update setup instructions

--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -1,20 +1,20 @@
 color_scheme=github
-app_version=0.13.11
-example_scala_version=2.11.7
+app_version=1.0.0-M4
+example_scala_version=2.11.8
 example_scalacheck_version=1.12.0
 example_specs2_version=2.4.14
 example_scalatest_version=2.2.1
-scala_binary_version=2.10
-scala_version=2.10.6
-global_base=~/.sbt/0.13
-global_plugins_base=~/.sbt/0.13/plugins/
-global_plugin_sbt_file=~/.sbt/0.13/plugins/build.sbt
-global_shellprompt_scala=~/.sbt/0.13/plugins/ShellPrompt.scala
-global_sbt_file=~/.sbt/0.13/global.sbt
+scala_binary_version=2.11
+scala_version=2.11.8
+global_base=~/.sbt/1.0.0-M4
+global_plugins_base=~/.sbt/1.0.0-M4/plugins/
+global_plugin_sbt_file=~/.sbt/1.0.0-M4/plugins/build.sbt
+global_shellprompt_scala=~/.sbt/1.0.0-M4/plugins/ShellPrompt.scala
+global_sbt_file=~/.sbt/1.0.0-M4/global.sbt
 sbt_native_package_base=https://dl.bintray.com/sbt/native-packages/sbt/
-sbt_deb_package_base=https://dl.bintray.com/sbt/debian/
-sbt_rpm_package_base=https://dl.bintray.com/sbt/rpm/
-launcher_release_base=https://repo.typesafe.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/
+sbt_deb_package_base=https://dl.bintray.com/sbt/debian-experimental/
+sbt_rpm_package_base=https://dl.bintray.com/sbt/rpm-experimental/
+launcher_release_base=https://repo1.maven.org/maven2/org/scala-sbt/sbt-launch/
 typesafe_ivy_snapshots=https://repo.typesafe.com/typesafe/ivy-snapshots/
 bintray_sbt_version=0.2.1
 layout.header=header.md
