Fix Windows installer link

--- a/src/nanoc/nanoc.yaml
+++ b/src/nanoc/nanoc.yaml
@@ -1,3 +1,12 @@
+sbtVersion: 0.13.13
+
+# Windows build version tends to be different from the rest
+windowsBuild: 0.13.13.1
+
+sbtVersionForScalaDoc: 0.13.12
+
+sbtBinaryVersion: 0.13
+
 # A list of file extensions that nanoc will consider to be textual rather than
 # binary. If an item with an extension not in this list is found,  the file
 # will be considered as binary.
@@ -60,12 +69,3 @@ data_sources:
     # will have the identifier “/about/” when turned off, but when turned on
     # it will become “/about.html/” instead.
     allow_periods_in_identifiers: false
-
-sbtVersion: 0.13.13
-
-# This is to fix broken 0.13.9 installer. Not needed for 0.13.10+
-windowsBuild: 0.13.13.1
-
-sbtVersionForScalaDoc: 0.13.12
-
-sbtBinaryVersion: 0.13
