--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -1,5 +1,7 @@
-color_scheme=github
 app_version=0.13.13
+windows_app_version=0.13.13.1
+
+color_scheme=github
 example_scala_version=2.11.8
 example_scalacheck_version=1.12.0
 example_specs2_version=2.4.14
