--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+# Use Ubuntu 14.04
+dist: trusty
 language: ruby
 rvm: 2.2.3
 cache:
@@ -16,10 +18,9 @@ install:
   - gem install redcarpet
   - gem install nokogiri
 before_install:
- - sudo add-apt-repository -y ppa:texlive-backports/ppa
  - echo "deb https://dl.bintray.com/sbt/debian /" | sudo tee -a /etc/apt/sources.list.d/sbt.list
  - sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823
  - sudo apt-get update -qq
- - sudo apt-get install -qq sbt ruby-dev pandoc latex-cjk-all texlive-full
+ - sudo apt-get install -qq sbt pandoc latex-cjk-all texlive-full
 before_script:
- - export JVM_OPTS="-Xms1024m -Xmx1024m -XX:ReservedCodeCacheSize=128m -XX:MaxPermSize=256m -Xss2m -Dfile.encoding=UTF-8"
+ - export JVM_OPTS="-Dfile.encoding=UTF-8"
