--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -13,7 +13,7 @@ global_plugins_base=~/.sbt/0.13/plugins/
 global_plugin_sbt_file=~/.sbt/0.13/plugins/build.sbt
 global_shellprompt_scala=~/.sbt/0.13/plugins/ShellPrompt.scala
 global_sbt_file=~/.sbt/0.13/global.sbt
-sbt_native_package_base=https://dl.bintray.com/sbt/native-packages/sbt/
+sbt_native_package_base=https://downloads.lightbend.com/sbt/
 sbt_deb_package_base=https://dl.bintray.com/sbt/debian/
 sbt_rpm_package_base=https://dl.bintray.com/sbt/rpm/
 launcher_release_base=https://repo.typesafe.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/
