--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -13,7 +13,7 @@ global_plugins_base=~/.sbt/1.0.0-M4/plugins/
 global_plugin_sbt_file=~/.sbt/1.0.0-M4/plugins/build.sbt
 global_shellprompt_scala=~/.sbt/1.0.0-M4/plugins/ShellPrompt.scala
 global_sbt_file=~/.sbt/1.0.0-M4/global.sbt
-sbt_native_package_base=https://downloads.lightbend.com/sbt/
+sbt_native_package_base=https://github.com/sbt/sbt/releases/download/v
 sbt_deb_package_base=https://dl.bintray.com/sbt/debian/
 sbt_rpm_package_base=https://dl.bintray.com/sbt/rpm/
 launcher_release_base=https://repo1.maven.org/maven2/org/scala-sbt/sbt-launch/
