Use bintray for GPG key

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ addons:
   apt:
     sources:
       - sourceline: 'deb https://dl.bintray.com/sbt/debian /'
-        key_url: http://scala-sbt.org/gpg.key
+        key_url: 'https://bintray.com/user/downloadSubjectPublicKey?username=sbt'
     packages:
       - sbt
       - pandoc
