Use openjdk in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
   - find $HOME/.sbt -name "*.lock" | xargs rm
   - find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
 jdk:
-  - oraclejdk7
+  - openjdk7
 install:
   - gem install nanoc:4.0.2
   - gem install redcarpet
