Use sudo false in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 # Use Ubuntu 14.04
 dist: trusty
-# Can't use sudo: false because of travis-ci/travis-ci#7019
-sudo: required
+sudo: false
 language: ruby
 rvm: 2.2.3
 cache:
