switch hosting of the installers

--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -1,19 +1,22 @@
-app_version=1.0.0-M6
-windows_app_version=1.0.0-M6
+app_version=1.0.0-RC2
+windows_app_version=1.0.0-RC2
+
+download_version_str=sbt100rc2
+windows_download_version_str=sbt100rc2
+sbt_native_package_base=https://cocl.us
 
 color_scheme=github
-example_scala_version=2.12.1
+example_scala_version=2.12.2
 example_scalacheck_version=1.13.4
 example_specs2_version=2.4.17
 example_scalatest_version=3.0.1
 scala_binary_version=2.12
 scala_version=2.12.2
-global_base=~/.sbt/1.0.0-M5
-global_plugins_base=~/.sbt/1.0.0-M5/plugins/
-global_plugin_sbt_file=~/.sbt/1.0.0-M5/plugins/build.sbt
-global_shellprompt_scala=~/.sbt/1.0.0-M5/plugins/ShellPrompt.scala
-global_sbt_file=~/.sbt/1.0.0-M5/global.sbt
-sbt_native_package_base=https://github.com/sbt/sbt/releases/download/v
+global_base=~/.sbt/1.0
+global_plugins_base=~/.sbt/1.0/plugins/
+global_plugin_sbt_file=~/.sbt/1.0/plugins/build.sbt
+global_shellprompt_scala=~/.sbt/1.0/plugins/ShellPrompt.scala
+global_sbt_file=~/.sbt/1.0/global.sbt
 sbt_deb_package_base=https://dl.bintray.com/sbt/debian/
 sbt_rpm_package_base=https://dl.bintray.com/sbt/rpm/
 launcher_release_base=https://repo1.maven.org/maven2/org/scala-sbt/sbt-launch/
