Update instructions for sbt-bintray 0.5.1

--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -18,7 +18,7 @@ sbt_deb_package_base=https://dl.bintray.com/sbt/debian/
 sbt_rpm_package_base=https://dl.bintray.com/sbt/rpm/
 launcher_release_base=https://repo.typesafe.com/typesafe/ivy-releases/org.scala-sbt/sbt-launch/
 typesafe_ivy_snapshots=https://repo.typesafe.com/typesafe/ivy-snapshots/
-bintray_sbt_version=0.3.0
+sbt_bintray_version=0.5.1
 layout.header=header.md
 layout.header.height=80px
 layout.footer=footer.md
