--- a/src/nanoc/nanoc.yaml
+++ b/src/nanoc/nanoc.yaml
@@ -1,11 +1,15 @@
-sbtVersion: 0.13.15
+sbtVersion: 0.13.16
+download_version_str: sbt01316
 
 # Windows build version tends to be different from the rest
-windowsBuild: 0.13.15
+windowsBuild: 0.13.16
+windows_download_version_str: sbt01316
 
 sbtVersionForScalaDoc: 0.13.15
 
 sbtBinaryVersion: 0.13
+
+sbt_native_package_base: https://cocl.us
 
 # A list of file extensions that nanoc will consider to be textual rather than
 # binary. If an item with an extension not in this list is found,  the file
