--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -1,8 +1,8 @@
-app_version=1.0.0-RC2
-windows_app_version=1.0.0-RC2
+app_version=0.13.16
+windows_app_version=0.13.16
 
-download_version_str=sbt100rc2
-windows_download_version_str=sbt100rc2
+download_version_str=sbt01316
+windows_download_version_str=sbt01316
 sbt_native_package_base=https://cocl.us
 
 color_scheme=github
