--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ addons:
       - sourceline: 'deb https://dl.bintray.com/sbt/debian /'
         key_url: 'https://bintray.com/user/downloadSubjectPublicKey?username=sbt'
     packages:
-      - sbt
+      - sbt=0.13.16
       - pandoc
       - latex-cjk-all
       - texlive-full
