remove MaxPermSize option
sbt 1.0 require Java 8.
The MaxPermSize option removed since Java 8.

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ addons:
       - texlive-full
 
 before_script:
- - export JVM_OPTS="-Dfile.encoding=UTF-8 -Xmx1G -Xms1G -server -XX:ReservedCodeCacheSize=128M -XX:MaxPermSize=512M"
+ - export JVM_OPTS="-Dfile.encoding=UTF-8 -Xmx1G -Xms1G -server -XX:ReservedCodeCacheSize=128M"
 
 script:
   - /usr/bin/sbt scalafmtTest makeSite
