--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,8 @@ addons:
 before_script:
  - export JVM_OPTS="-Dfile.encoding=UTF-8 -Xmx1G -Xms1G -server -XX:ReservedCodeCacheSize=128M"
 
-script: sbt -Dsbt.website.generate_pdf scalafmtTest scripted makeSite
+# Use `/usr/bin/sbt` that we manually installed
+script: /usr/bin/sbt -Dsbt.website.generate_pdf scalafmtTest scripted makeSite
 
 after_success: .travis/publish-site.sh
 
