--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ addons:
   apt:
     sources:
       - sourceline: 'deb https://dl.bintray.com/sbt/debian /'
-      - key_url: 'https://bintray.com/user/downloadSubjectPublicKey?username=sbt'
+        key_url: 'https://bintray.com/user/downloadSubjectPublicKey?username=sbt'
     packages:
       - sbt=1.1.6
       - pandoc
