improve documentation on cross building

--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -2,7 +2,8 @@ app_version=1.2.7
 windows_app_version=1.2.7
 
 color_scheme=github
-example_scala_version=2.12.7
+example_scala_version=2.12.8
+example_scala211 = 2.11.12
 example_scalacheck_version=1.13.4
 example_specs2_version=2.4.17
 example_scalatest_version=3.0.5
