--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -8,3 +8,7 @@ docstrings = JavaDoc
 
 # This also seems more idiomatic to include whitespace in import x.{ yyy }
 spaces.inImportCurlyBraces = true
+
+trailingCommas = preserve
+
+version = "2.0.1"
