--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ cache:
     - $HOME/.ivy2/cache
     - $HOME/.sbt
 
-jdk: oraclejdk8
+jdk: openjdk8
 
 install:
   - gem install nanoc:4.0.2
@@ -27,7 +27,7 @@ addons:
       - sourceline: 'deb https://dl.bintray.com/sbt/debian /'
         key_url: 'https://bintray.com/user/downloadSubjectPublicKey?username=sbt'
     packages:
-      - sbt=1.3.0
+      - sbt=1.3.1
       - libgmp10
       - latex-cjk-all
       - texlive-full
