use $HOME instead of `~`

--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -9,11 +9,11 @@ example_specs2_version=2.4.17
 example_scalatest_version=3.0.5
 scala_binary_version=2.12
 scala_version=2.12.10
-global_base=~/.sbt/1.0
-global_plugins_base=~/.sbt/1.0/plugins/
-global_plugin_sbt_file=~/.sbt/1.0/plugins/build.sbt
-global_shellprompt_scala=~/.sbt/1.0/plugins/ShellPrompt.scala
-global_sbt_file=~/.sbt/1.0/global.sbt
+global_base=\$HOME/.sbt/1.0
+global_plugins_base=\$HOME/.sbt/1.0/plugins/
+global_plugin_sbt_file=\$HOME/.sbt/1.0/plugins/build.sbt
+global_shellprompt_scala=\$HOME/.sbt/1.0/plugins/ShellPrompt.scala
+global_sbt_file=\$HOME/.sbt/1.0/global.sbt
 sbt_native_package_base=https://piccolo.link
 sbt_deb_package_base=https://dl.bintray.com/sbt/debian/
 sbt_rpm_package_base=https://dl.bintray.com/sbt/rpm/
