--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -14,7 +14,7 @@ global_plugins_base=\$HOME/.sbt/1.0/plugins/
 global_plugin_sbt_file=\$HOME/.sbt/1.0/plugins/build.sbt
 global_shellprompt_scala=\$HOME/.sbt/1.0/plugins/ShellPrompt.scala
 global_sbt_file=\$HOME/.sbt/1.0/global.sbt
-sbt_native_package_base=https://piccolo.link
+sbt_native_package_base=https://github.com/sbt/sbt/releases/download
 sbt_deb_package_base=https://dl.bintray.com/sbt/debian/
 sbt_rpm_package_base=https://dl.bintray.com/sbt/rpm/
 launcher_release_base=https://repo1.maven.org/maven2/org/scala-sbt/sbt-launch/
