Use Pandoc to convert markdown to PDF

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,3 +32,40 @@ jobs:
         find $HOME/.ivy2/cache                       -name "ivydata-*.properties" -delete || true
         find $HOME/.cache/coursier/v1                -name "ivydata-*.properties" -delete || true
         find $HOME/.sbt                              -name "*.lock"               -delete || true
+    - name: Pandoc English
+      uses: Ender-events/pandoc@master
+      with:
+        args: '--pdf-engine=xelatex --toc -s -o target/pamflet/sbt-reference.pdf target/pamflet/Combined+Pages+Pdf.md'
+    - name: Pandoc Japanese
+      uses: Ender-events/pandoc@master
+      with:
+        args: '--pdf-engine=lualatex documentclass=ltjarticle --toc -s -o target/pamflet/ja/sbt-reference.pdf target/pamflet/ja/Combined+Pages+Pdf.md'
+    - name: Pandoc Chinese
+      uses: Ender-events/pandoc@master
+      with:
+        args: '--pdf-engine=xelatex --toc -s -o target/pamflet/zh-cn/sbt-reference.pdf target/pamflet/zh-cn/Combined+Pages+Pdf.md'
+    - name: Pandoc Spanish
+      uses: Ender-events/pandoc@master
+      with:
+        args: '--pdf-engine=xelatex --toc -s -o target/pamflet/es/sbt-reference.pdf target/pamflet/es/Combined+Pages+Pdf.md'
+
+    - name: Archive English PDF
+      uses: actions/upload-artifact@v2
+      with:
+        name: sbt-reference.pdf
+        path: target/pamflet/sbt-reference.pdf
+    - name: Archive Japanese PDF
+      uses: actions/upload-artifact@v2
+      with:
+        name: sbt-reference-ja.pdf
+        path: target/pamflet/ja/sbt-reference.pdf
+    - name: Archive Chinese PDF
+      uses: actions/upload-artifact@v2
+      with:
+        name: sbt-reference-zh-cn.pdf
+        path: target/pamflet/zh-cn/sbt-reference.pdf
+    - name: Archive Spanish PDF
+      uses: actions/upload-artifact@v2
+      with:
+        name: sbt-reference-es.pdf
+        path: target/pamflet/es/sbt-reference.pdf
