--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Pandoc Japanese
       uses: eed3si9n/pandoc@master
       with:
-        args: '--pdf-engine=lualatex -V CJKmainfont=NotoSansJP -V documentclass=ltjarticle --toc -s -o target/pamflet/ja/sbt-reference.pdf target/pamflet/ja/Combined+Pages+Pdf.md'
+        args: '--pdf-engine=xelatex -V CJKmainfont=NotoSansJP --toc -s -o target/pamflet/ja/sbt-reference.pdf target/pamflet/ja/Combined+Pages+Pdf.md'
     - name: Pandoc Chinese
       uses: eed3si9n/pandoc@master
       with:
