--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,11 +39,11 @@ jobs:
     - name: Pandoc Japanese
       uses: eed3si9n/pandoc@master
       with:
-        args: '--pdf-engine=xelatex -V CJKmainfont=NotoSansJP --toc -s -o target/pamflet/ja/sbt-reference.pdf target/pamflet/ja/Combined+Pages+Pdf.md'
+        args: '--pdf-engine=xelatex -V CJKmainfont="Noto Sans JP" --toc -s -o target/pamflet/ja/sbt-reference.pdf target/pamflet/ja/Combined+Pages+Pdf.md'
     - name: Pandoc Chinese
       uses: eed3si9n/pandoc@master
       with:
-        args: '--pdf-engine=xelatex -V CJKmainfont=NotoSansSC --toc -s -o target/pamflet/zh-cn/sbt-reference.pdf target/pamflet/zh-cn/Combined+Pages+Pdf.md'
+        args: '--pdf-engine=xelatex -V CJKmainfont="Noto Sans SC" --toc -s -o target/pamflet/zh-cn/sbt-reference.pdf target/pamflet/zh-cn/Combined+Pages+Pdf.md'
     - name: Pandoc Spanish
       uses: eed3si9n/pandoc@master
       with:
