--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,4 +53,4 @@ jobs:
       run: |
         git config user.name "Eugene Yokota"
         git config user.email "eed3si9n@gmail.com"
-        sbt -v ghpagesPushSite
+        sbt -v -Dsbt.website.detect_pdf ghpagesPushSite
