Fix broken links
Fixes https://github.com/sbt/website/issues/880

--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -19,6 +19,7 @@ sbt_deb_package_base=https://dl.bintray.com/sbt/debian/
 sbt_rpm_package_base=https://dl.bintray.com/sbt/rpm/
 launcher_release_base=https://repo1.maven.org/maven2/org/scala-sbt/sbt-launch/
 typesafe_ivy_snapshots=https://repo.typesafe.com/typesafe/ivy-snapshots/
+apidoc_base=https://www.scala-sbt.org/1.x
 sbt_bintray_version=0.5.2
 layout.header=header.md
 layout.header.height=80px
