--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -2,7 +2,7 @@ maxColumn = 100
 project.git = true
 project.excludeFilters = [ /script/, ]
 
-# http://docs.scala-lang.org/style/scaladoc.html recommends the JavaDoc style.
+# https://docs.scala-lang.org/style/scaladoc.html recommends the JavaDoc style.
 # scala/scala is written that way too https://github.com/scala/scala/blob/v2.12.2/src/library/scala/Predef.scala
 docstrings = JavaDoc
 
