fix 'verion' typo; minor updates to README; update scalafmt version

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,3 +1,5 @@
+version = 2.7.5
+
 maxColumn = 100
 project.git = true
 project.excludeFilters = [ /script/, ]
@@ -10,5 +12,3 @@ docstrings = JavaDoc
 spaces.inImportCurlyBraces = true
 
 trailingCommas = preserve
-
-version = "2.0.1"
