update example library versions

--- a/src/reference/template.properties
+++ b/src/reference/template.properties
@@ -2,14 +2,16 @@ app_version=1.6.2
 windows_app_version=1.6.2
 
 color_scheme=github
-example_scala_version=2.12.15
-example_scala213=2.13.6
+example_scala_version=2.12.16
+example_scala213=2.13.8
 example_scala211=2.11.12
-example_scalacheck_version=1.13.4
-example_specs2_version=2.4.17
-example_scalatest_version=3.0.5
+example_scalacheck_version=1.16.0
+example_specs2_version=4.16.0
+example_scalatest_version=3.2.12
+example_akka_version=2.6.19
+example_scala_stm_version=0.9.1
 scala_binary_version=2.12
-scala_version=2.12.14
+scala_version=2.12.16
 global_base=\$HOME/.sbt/1.0
 global_plugins_base=\$HOME/.sbt/1.0/plugins/
 global_plugin_sbt_file=\$HOME/.sbt/1.0/plugins/build.sbt
@@ -21,7 +23,6 @@ sbt_rpm_package_base=https://dl.bintray.com/sbt/rpm/
 launcher_release_base=https://repo1.maven.org/maven2/org/scala-sbt/sbt-launch/
 typesafe_ivy_snapshots=https://repo.typesafe.com/typesafe/ivy-snapshots/
 apidoc_base=https://www.scala-sbt.org/1.x
-sbt_bintray_version=0.5.2
 layout.header=header.md
 layout.header.height=80px
 layout.footer=footer.md
