--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
     - name: Setup
-      uses: olafurpg/setup-scala@v14
+      uses: actions/setup-java@v3
       with:
-        java-version: "adopt@1.8"
+        distribution: 'adopt'
+        java-version: '8'
     - name: Coursier cache
       uses: coursier/cache-action@v6
     - name: Cache sbt
