Integrate Docusaurus building

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,10 @@ jobs:
         distribution: 'adopt'
         java-version: '11'
         cache: 'sbt'
+    - name: Setup node
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
 
     - name: Build and test
       run: |
