Reboot Getting Started guide

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         cargo install mdbook --no-default-features --features search --vers "^0.4" --locked
         cargo install mdbook-variables --vers "^0.2" --locked
+        cargo install mdbook-admonish --vers "^1" --locked
         export PATH="$PATH:$HOME/.cargo/bin"
         mdbook --version
 
