--- a/book.toml
+++ b/book.toml
@@ -3,11 +3,11 @@ authors = ["Eugene Yokota"]
 language = "en"
 multilingual = false
 src = "src/reference"
-title = "The book of sbt"
+title = "The Book of sbt"
 
 [output.html]
 theme = "theme"
-additional-css = ["src/reference/custom-2024.css"]
+additional-css = ["src/reference/custom-2024.css", "src/reference/mdbook-admonish.css"]
 cname = "www.scala-sbt.org"
 
 [preprocessor.variables]
@@ -15,4 +15,8 @@ cname = "www.scala-sbt.org"
 [preprocessor.variables.variables]
 sbt_version = "2.0.0-alpha7"
 sbt_runner_version = "1.9.8"
-scala3ExampleVersion = "3.3.1"
+scala3_example_version = "3.3.1"
+
+[preprocessor.admonish]
+command = "mdbook-admonish"
+assets_version = "3.0.2" # do not edit: managed by `mdbook-admonish install`
